--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
 @layer base {
   html {
     font-family: "Raleway", sans-serif;
-    background: linear-gradient(to bottom, #1f2937, #000000);
+    background-color: "white";
   }
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
